cluster-home/workloads/buildbarn/scheduler.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-ubuntu22-04
  namespace: buildbarn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
      instance: ubuntu22-04
  template:
    metadata:
      labels:
        app: scheduler
        instance: ubuntu22-04
    spec:
      containers:
      - args:
        - /config/scheduler.jsonnet
        image: ghcr.io/buildbarn/bb-scheduler:20260319t042723z-cd89f05
        name: scheduler
        ports:
        - containerPort: 8982
          protocol: TCP
        - containerPort: 8983
          protocol: TCP
        - containerPort: 7982
          protocol: TCP
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
      volumes:
        - name: configs
          configMap:
            name: buildbarn-config
            items:
            - key: common.libsonnet
              path: common.libsonnet
            - key: scheduler.jsonnet
              path: scheduler.jsonnet
