cluster-home/workloads/buildbarn/storage.StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: storage
  namespace: buildbarn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storage
  serviceName: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
      - args:
        - /config/storage.jsonnet
        image: ghcr.io/buildbarn/bb-storage:20260317t135248z-dc342e1
        name: storage
        ports:
        - containerPort: 8981
          protocol: TCP
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /storage-cas
          name: cas
        - mountPath: /storage-ac
          name: ac
      volumes:
      - name: configs
        configMap:
          name: buildbarn-config
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: storage.jsonnet
            path: storage.jsonnet
  volumeClaimTemplates:
  - metadata:
      name: cas
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: "pve-nvme-wd-blue"
      volumeAttributesClassName: csi-proxmox-backup-disable
      resources:
        requests:
          storage: 50Gi
  - metadata:
      name: ac
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: "pve-nvme-wd-blue"
      volumeAttributesClassName: csi-proxmox-backup-disable
      resources:
        requests:
          storage: 10Gi
