cluster-home/workloads/buildbarn/worker-starterkit-bash-coreutils-x86_64-cc.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-starterkit-bash-coreutils-x86-64-cc
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  replicas: 8
  selector:
    matchLabels:
      app: worker
      instance: starterkit-bash-coreutils-x86-64-cc
  template:
    metadata:
      labels:
        app: worker
        instance: starterkit-bash-coreutils-x86-64-cc
    spec:
      containers:
      - args:
        - /config/worker-starterkit-bash-coreutils-x86_64-cc.jsonnet
        image: ghcr.io/buildbarn/bb-worker:20260319t042723z-cd89f05
        name: worker
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
      - command: [/bb/bb_runner, /config/runner-common.jsonnet]
        image: harbor.puqu.io/starterkit/bash-coreutils-x86_64-cc:2wgjj260ff4aclgbgf8fi5wx7sbfxy9p
        name: runner
        securityContext:
          runAsUser: 65534
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
        - mountPath: /bb
          name: empty
          readOnly: true
      volumes:
      - name: empty
        emptyDir: {}
      - name: configs
        configMap:
          name: buildbarn-config
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: runner-common.jsonnet
            path: runner-common.jsonnet
          - key: worker-starterkit-bash-coreutils-x86_64-cc.jsonnet
            path: worker-starterkit-bash-coreutils-x86_64-cc.jsonnet
      - emptyDir: {}
        name: worker
