cluster-home/workloads/buildbarn/worker-ubuntu22-04.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-ubuntu22-04
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  replicas: 8
  selector:
    matchLabels:
      app: worker
      instance: ubuntu22-04
  template:
    metadata:
      labels:
        app: worker
        instance: ubuntu22-04
    spec:
      containers:
      - args:
        - /config/worker-ubuntu22-04.jsonnet
        image: ghcr.io/buildbarn/bb-worker:20260319t042723z-cd89f05
        name: worker
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
      - command: [/bb/bb_runner, /config/runner-common.jsonnet]
        image: ghcr.io/catthehacker/ubuntu:act-22.04@sha256:41e84facdece5f25b0de00cd69969f5f032c54f5bb7313f385727330db9ac40f
        name: runner
        securityContext:
          runAsUser: 65534
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
        - mountPath: /bb
          name: empty
          readOnly: true
      volumes:
      - name: empty
        emptyDir: {}
      - name: configs
        configMap:
          name: buildbarn-config
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: runner-common.jsonnet
            path: runner-common.jsonnet
          - key: worker-ubuntu22-04.jsonnet
            path: worker-ubuntu22-04.jsonnet
      - emptyDir: {}
        name: worker
