cluster-home/workloads/buildbarn/browser.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: browser
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  ports:
  - port: 7984
    protocol: TCP
    name: http
  selector:
    app: browser
  type: ClusterIP
