cluster-home/workloads/buildbarn/frontend.Service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
  name: frontend
  namespace: buildbarn
spec:
  ports:
  - port: 8980
    protocol: TCP
    name: grpc
  selector:
    app: frontend
  type: NodePort
