cluster-home/workloads/buildbarn/scheduler.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scheduler
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  ports:
  - port: 8982
    protocol: TCP
    name: client-grpc
  - port: 8983
    protocol: TCP
    name: worker-grpc
  - port: 7982
    protocol: TCP
    name: http
  selector:
    app: scheduler
    instance: ubuntu22-04
  type: ClusterIP
