cluster-home/workloads/buildbarn/storage.Service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
  name: storage
  namespace: buildbarn
spec:
  clusterIP: None
  ports:
  - port: 8981
    protocol: TCP
    name: grpc
  selector:
    app: storage
